--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "gen:dbtypes": "supabase gen types --project-id pvaxcxmdwdojypqkrooj --lang=typescript > types/database.ts"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
+    "lodash": "^4.17.21",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
@@ -18,6 +20,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
